--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="https://images.unsplash.com/photo-1598257006626-48b0c252070d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+              src="https://images.pexels.com/photos/3065171/pexels-photo-3065171.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
               alt="Mulher pensando"
             />
           </div>
